replace footers, grid already working properly

--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -209,7 +209,7 @@
 
         <footer class="footer">
           <div class="row sitemap-wrapper">
-            <div class="col-12 col-md-3 media-links-wrapper d-flex justify-content-between flex-column">
+            <div class="col-sm-12 col-lg-3 media-links-wrapper d-flex justify-content-between flex-column">
               <div>
                 <img src="assets/images/praxis-logo.svg">
               </div>
@@ -232,19 +232,19 @@
                 </a>
               </div>
             </div>
-            <div class="col-5 col-md-2 sitemap">
+            <div class="col-6 col-lg-2 sitemap">
               <a href="shop.html"><h6 class="footer-link">Loja</h6></a>
               <a href="community.html"><h6 class="footer-link">Comunidade</h6></a>
               <a href="contacts.html"><h6 class="footer-link">Contactos</h6></a>
               <a href="community"><h6 class="footer-link">Eventos</h6></a>
             </div>
-            <div class="col-7 col-md-3 policies">
+            <div class="col-6 col-lg-3 policies">
               <a href="faqs.html" class="footer-link"><small>Perguntas frequentes</small></a>
               <a href="terms-conditions.html" class="footer-link"><small>Termos e Condições</small></a>
               <a href="privacy-policy.html" class="footer-link"><small>Política de Privacidade</small></a>
               <a href="complaint-book" class="footer-link"><small>Livro de reclamações</small></a>
             </div>
-            <div class="col-12 col-md-4 newsletter">
+            <div class="col-sm-12 col-lg-4 newsletter">
               <label>Fica a par das novidades</label>
               <div class="d-flex newsletter-field-container">
                 <input type="email" placeholder="Insere o teu email..." class="field-input light">
