Fixing beer swiper and grid on toher pages

--- a/brewery.html
+++ b/brewery.html
@@ -226,9 +226,9 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
           <div class="others-wrapper">
             <h1 class="big-type">2019</h1>
 
-            <div class="carousel swiper-container swiper-container-horizontal">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide-recommended">
+            <div class="carousel scroll-container scroll-container-horizontal">
+              <div class="scroll-wrapper">
+                <div class="scroll-slide-recommended">
                 <article class="beer-article ambar-article">
                   <a class="beer-article-link" href="#">
                     <div class="beer-article-media">
@@ -245,7 +245,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
                   </a>
                 </article>
                 </div>
-                <div class="swiper-slide-recommended">
+                <div class="scroll-slide-recommended">
                 <article class="beer-article pilsener-article">
                   <a class="beer-article-link" href="#">
                     <div class="beer-article-media">
@@ -261,7 +261,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
                   </a>
                 </article>
                 </div>
-                <div class="swiper-slide-recommended ipa-article">
+                <div class="scroll-slide-recommended ipa-article">
                 <article class="beer-article">
                   <a class="beer-article-link" href="#">
                     <div class="beer-article-media">
