--- a/beers.html
+++ b/beers.html
@@ -24,7 +24,8 @@
     <meta property="og:description" content="Praxis Restaurante, Fábrica e Museu da Cerveja de Coimbra. Produzimos a Cerveja Praxis com várias variedades: Pilsener, Dunkel, Ambar, Weiss.">
     <meta property="article:publisher" content="https://www.facebook.com/cervejaPraxis"/>
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
-    
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
     </head>
 
@@ -98,131 +99,127 @@
       </header>
 
       <main class="beers-page">
-          <section class="section-items bg-dark text-white">
-            <div class="scroll-slider">
-                <div class="scroll-wrapper">
-                <article class="item scroll-slide">
-                    <a href="beers/pilsener.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Pilsener</span>
-                            <img src="./assets/images/pilsener-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Pilsener</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/dunkel.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Dunkel</span>
-                            <img src="./assets/images/dunkel-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Dunkel</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/ambar.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Ambar</span>
-                            <img src="./assets/images/ambar-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Ambar</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/weiss.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Weiss</span>
-                            <img src="./assets/images/weiss-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Weiss</h3>
-                        </a>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/belgian-dark.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Belgian Dark</span>
-                            <img src="./assets/images/belgian-dark-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Belgian Dark</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/portuguese-pedro.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Portuguese Pedro</span>
-                            <img src="./assets/images/pedro-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Portuguese<br>Pedro</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/ipa.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">IPA</span>
-                            <img src="./assets/images/ipa-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">IPA</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/pumpkin-ale.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Pumpkin Ale</span>
-                            <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Pumpkin Ale</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/lausus.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Lausus</span>
-                            <img src="./assets/images/lausus-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Lausus</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/bsda.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">B.S.D.A</span>
-                            <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">B.S.D.A</h3>
-                    </a>
-                </article>
-                <article class="item scroll-slide">
-                    <a href="beers/strong-dunkel.html" class="cover">
-                        <div class="picture">
-                            <span class="label obj-label-left">Descobrir</span>
-                            <span class="label obj-label-right">Strong Dunkel</span>
-                            <img src="./assets/images/lausus-beer-lg.png" class="media"/>
-                        </div>
-                        <h3 class="title">Strong Dunkel</h3>
-                    </a>
-                </article>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <article class="swiper-slide item">
+                <a href="beers/pilsener.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">Pilsener</span>
+                      <img src="./assets/images/pilsener-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Pilsener</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/dunkel.html" class="cover">
+                    <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Dunkel</span>
+                        <img src="./assets/images/dunkel-beer-lg.png" class="media"/>
+                    </div>
+                    <h3 class="title">Dunkel</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/ambar.html" class="cover">
+                    <div class="picture">
+                        <span class="label obj-label-left">Descobrir</span>
+                        <span class="label obj-label-right">Ambar</span>
+                        <img src="./assets/images/ambar-beer-lg.png" class="media"/>
+                    </div>
+                    <h3 class="title">Ambar</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/weiss.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">Weiss</span>
+                      <img src="./assets/images/weiss-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Weiss</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/belgian-dark.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">Belgian Dark</span>
+                      <img src="./assets/images/belgian-dark-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Belgian Dark</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/portuguese-pedro.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">Portuguese Pedro</span>
+                      <img src="./assets/images/pedro-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Portuguese<br>Pedro</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/ipa.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">IPA</span>
+                      <img src="./assets/images/ipa-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">IPA</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/pumpkin-ale.html" class="cover">
+                  <div class="picture">
+                    <span class="label obj-label-left">Descobrir</span>
+                    <span class="label obj-label-right">Pumpkin Ale</span>
+                    <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Pumpkin Ale</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/lausus.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">Lausus</span>
+                      <img src="./assets/images/lausus-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Lausus</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/bsda.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">B.S.D.A</span>
+                      <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">B.S.D.A</h3>
+                </a>
+              </article>
+              <article class="swiper-slide item">
+                <a href="beers/strong-dunkel.html" class="cover">
+                  <div class="picture">
+                      <span class="label obj-label-left">Descobrir</span>
+                      <span class="label obj-label-right">Strong Dunkel</span>
+                      <img src="./assets/images/lausus-beer-lg.png" class="media"/>
+                  </div>
+                  <h3 class="title">Strong Dunkel</h3>
+                </a>
+              </article>
             </div>
-            </div>
-        </section>
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+          </div>
       </main>
     </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-    <script src="assets/js/beer-scroll.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="assets/js/navigation.js"></script>
-    
+    <script src="assets/js/beer-scroll.js"></script>
 </html>
