--- a/beers.html
+++ b/beers.html
@@ -212,8 +212,8 @@
                 </a>
               </article>
             </div>
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
+            <!-- If we need scrollbar 
+            <div class="swiper-scrollbar"></div>-->
           </div>
       </main>
     </body>
