--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                 </a>
               </article>
             </div>
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
+            <!-- If we need scrollbar
+            <div class="swiper-scrollbar"></div>-->
           </div>
         </section>
 
