add new community page & fix news swiper conflitcs

--- a/beers.html
+++ b/beers.html
@@ -99,7 +99,7 @@
       </header>
 
       <main class="beers-page">
-        <div class="swiper-container">
+        <div class="swiper-container swiper-container-beers">
             <div class="swiper-wrapper">
               <article class="swiper-slide pilsener-item">
                 <a href="beers/pilsener.html" class="cover">
