--- a/community.html
+++ b/community.html
@@ -99,147 +99,27 @@
       </header>
 
       <main>
-        <section class="fullscreen-wrapper dark-section d-flex">
-          <img class="bg-image" src="assets/images/pure-malt-lg.jpg" alt="Paxis Teaser">
+        <section class="news-section community-news">
 
-          <div class="w-50 align-self-end">
-            <h2 class="invert">Pure <br>Malt Beer</h2>
+          <div class="tabs-navigation">
+            <ul class="tab-nav">
+              <li class="tab-item">
+                <a class="tab-link active" href="#">Tudo</a>
+              </li>
+              <li class="tab-item">
+                <a class="tab-link" href="#">Notícias</a>
+              </li>
+              <li class="tab-item">
+                <a class="tab-link" href="#">Eventos</a>
+              </li>
+              <li class="tab-item">
+                <a class="tab-link" href="#">Novidades</a>
+              </li>
+              <li class="tab-item">
+                <a class="tab-link" href="#">Outros</a>
+              </li>
+            </ul>
           </div>
-        </section>
-
-        <section class="fullscreen-wrapper dark-section">
-          <img class="bg-image" src="assets/images/brewery-lg.jpg" alt="Cervejaria">
-          <div class="row">
-            <div class="col-12 col-sm-10 col-lg-4 offset-md-1 offset-lg-7">
-              <h3 class="section-title invert">Cervejaria Praxis</h3>
-              <h5 class="section-description invert">A Praxis (MICROCERVEJARIA) devolve a Coimbra uma herança
-                 cervejeira onde o principal segredo é a Água de Coimbra.</h5>
-              <button class="button light">Visitar</button>
-            </div>
-          </div>
-        </section>
-
-        <section class="beers-page">
-          <div class="swiper-container swiper-container-beers">
-            <div class="swiper-wrapper">
-              <article class="swiper-slide item">
-                <a href="beers/pilsener.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Pilsener</span>
-                      <img src="./assets/images/pilsener-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Pilsener</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/dunkel.html" class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Dunkel</span>
-                        <img src="./assets/images/dunkel-beer-lg.png" class="media"/>
-                    </div>
-                    <h3 class="title">Dunkel</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/ambar.html" class="cover">
-                    <div class="picture">
-                        <span class="label obj-label-left">Descobrir</span>
-                        <span class="label obj-label-right">Ambar</span>
-                        <img src="./assets/images/ambar-beer-lg.png" class="media"/>
-                    </div>
-                    <h3 class="title">Ambar</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/weiss.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Weiss</span>
-                      <img src="./assets/images/weiss-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Weiss</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/belgian-dark.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Belgian Dark</span>
-                      <img src="./assets/images/belgian-dark-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Belgian Dark</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/portuguese-pedro.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Portuguese Pedro</span>
-                      <img src="./assets/images/pedro-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Portuguese<br>Pedro</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/ipa.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">IPA</span>
-                      <img src="./assets/images/ipa-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">IPA</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/pumpkin-ale.html" class="cover">
-                  <div class="picture">
-                    <span class="label obj-label-left">Descobrir</span>
-                    <span class="label obj-label-right">Pumpkin Ale</span>
-                    <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Pumpkin Ale</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/lausus.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Lausus</span>
-                      <img src="./assets/images/lausus-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Lausus</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/bsda.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">B.S.D.A</span>
-                      <img src="./assets/images/pumpkin-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">B.S.D.A</h3>
-                </a>
-              </article>
-              <article class="swiper-slide item">
-                <a href="beers/strong-dunkel.html" class="cover">
-                  <div class="picture">
-                      <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Strong Dunkel</span>
-                      <img src="./assets/images/lausus-beer-lg.png" class="media"/>
-                  </div>
-                  <h3 class="title">Strong Dunkel</h3>
-                </a>
-              </article>
-            </div>
-            <!-- If we need scrollbar
-            <div class="swiper-scrollbar"></div>-->
-          </div>
-        </section>
-
-        <section class="news-section homepage-news">
-          <h2 class="news-title o-10">Novidades</h2>
 
           <div class="carousel swiper-container swiper-container-news">
             <div class="swiper-wrapper">
@@ -303,19 +183,6 @@
           </div>
         </section>
 
-        <section class="fullscreen-wrapper dark-section">
-          <img class="bg-image" src="assets/images/shop-lg.jpg" alt="Change me">
-          <div class="row">
-            <div class="col-12 col-sm-10 col-lg-4 offset-md-1 offset-lg-7">
-              <h3 class="section-title invert">Loja Praxis</h3>
-              <h5 class="section-description invert">
-                This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
-                Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
-              <button class="button light">Visitar</button>
-            </div>
-          </div>
-        </section>
-
         <footer class="footer">
           <div class="row sitemap-wrapper">
             <div class="col-sm-12 col-lg-3 media-links-wrapper d-flex justify-content-between flex-column">
@@ -373,7 +240,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="assets/js/navigation.js"></script>
-    <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/news-scroll.js"></script>
   </body>
 </html>
