--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <section class="beers-page">
           <div class="swiper-container swiper-container-beers">
             <div class="swiper-wrapper">
-              <article class="swiper-slide item">
+              <article class="swiper-slide pilsener-item">
                 <a href="beers/pilsener.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -132,7 +132,7 @@
                   <h3 class="title">Pilsener</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide dunkel-item">
                 <a href="beers/dunkel.html" class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
@@ -142,7 +142,7 @@
                     <h3 class="title">Dunkel</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide ambar-item">
                 <a href="beers/ambar.html" class="cover">
                     <div class="picture">
                         <span class="label obj-label-left">Descobrir</span>
@@ -152,7 +152,7 @@
                     <h3 class="title">Ambar</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide weiss-item">
                 <a href="beers/weiss.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -162,7 +162,7 @@
                   <h3 class="title">Weiss</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide belgian-dark-item">
                 <a href="beers/belgian-dark.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -172,7 +172,7 @@
                   <h3 class="title">Belgian Dark</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide portuguese-pedro-item">
                 <a href="beers/portuguese-pedro.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -182,7 +182,7 @@
                   <h3 class="title">Portuguese<br>Pedro</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide ipa-item">
                 <a href="beers/ipa.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -192,7 +192,7 @@
                   <h3 class="title">IPA</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide pumpkin-ale-item">
                 <a href="beers/pumpkin-ale.html" class="cover">
                   <div class="picture">
                     <span class="label obj-label-left">Descobrir</span>
@@ -202,7 +202,7 @@
                   <h3 class="title">Pumpkin Ale</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide lausus-item">
                 <a href="beers/lausus.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -212,7 +212,7 @@
                   <h3 class="title">Lausus</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide bsda-item">
                 <a href="beers/bsda.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
@@ -222,7 +222,7 @@
                   <h3 class="title">B.S.D.A</h3>
                 </a>
               </article>
-              <article class="swiper-slide item">
+              <article class="swiper-slide strong-dunkel-item">
                 <a href="beers/strong-dunkel.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
