--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <h3 class="section-title invert">Cervejaria Praxis</h3>
               <h5 class="section-description invert">A Praxis (MICROCERVEJARIA) devolve a Coimbra uma herança
                  cervejeira onde o principal segredo é a Água de Coimbra.</h5>
-              <button class="button light">Visitar</button>
+              <a href="brewery.html" class="button light">Visitar</a>
             </div>
           </div>
         </section>
@@ -311,7 +311,7 @@
               <h5 class="section-description invert">
                 This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
                 Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
-              <button class="button light">Visitar</button>
+              <!--<a href="online-store.html" class="button light disabled">Brevemente</a>-->
             </div>
           </div>
         </section>
@@ -342,10 +342,10 @@
               </div>
             </div>
             <div class="col-6 col-lg-2 sitemap">
-              <a href="shop.html"><h6 class="footer-link">Loja</h6></a>
-              <a href="community.html"><h6 class="footer-link">Comunidade</h6></a>
-              <a href="contacts.html"><h6 class="footer-link">Contactos</h6></a>
-              <a href="community"><h6 class="footer-link">Eventos</h6></a>
+              <a href="shop.html" class="footer-link disabled"><h6>Loja</h6></a>
+              <a href="community.html" class="footer-link"><h6>Comunidade</h6></a>
+              <a href="contacts.html" class="footer-link"><h6>Contactos</h6></a>
+              <a href="community" class="footer-link"><h6>Eventos</h6></a>
             </div>
             <div class="col-6 col-lg-3 policies">
               <a href="faqs.html" class="footer-link"><small>Perguntas frequentes</small></a>
@@ -364,7 +364,7 @@
           <div class="row rights-wrapper">
             <div class="col-12 rights-container d-flex justify-content-between">
               <small class="mb-20">® 2020 Praxis. Todos os direitos reservados</small>
-              <small class="mb-20">Made by F*Amazing</small>
+              <small class="mb-20">Made by <a class="madeby" href="https://famazing.pt/">F*Amazing</a></small>
             </div>
           </div>
         </footer>
