--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -233,10 +233,10 @@
               </div>
             </div>
             <div class="col-6 col-lg-2 sitemap">
-              <a href="shop.html"><h6 class="footer-link">Loja</h6></a>
-              <a href="community.html"><h6 class="footer-link">Comunidade</h6></a>
-              <a href="contacts.html"><h6 class="footer-link">Contactos</h6></a>
-              <a href="community"><h6 class="footer-link">Eventos</h6></a>
+              <a href="shop.html" class="footer-link disabled"><h6>Loja</h6></a>
+              <a href="community.html" class="footer-link"><h6>Comunidade</h6></a>
+              <a href="contacts.html" class="footer-link"><h6>Contactos</h6></a>
+              <a href="community" class="footer-link"><h6>Eventos</h6></a>
             </div>
             <div class="col-6 col-lg-3 policies">
               <a href="faqs.html" class="footer-link"><small>Perguntas frequentes</small></a>
@@ -255,7 +255,7 @@
           <div class="row rights-wrapper">
             <div class="col-12 rights-container d-flex justify-content-between">
               <small class="mb-20">® 2020 Praxis. Todos os direitos reservados</small>
-              <small class="mb-20">Made by F*Amazing</small>
+              <small class="mb-20">Made by <a class="madeby" href="https://famazing.pt/">F*Amazing</a></small>
             </div>
           </div>
         </footer>
