fixing recommended section

--- a/brewery.html
+++ b/brewery.html
@@ -134,7 +134,7 @@
             <div class="col-sm-10 col-lg-5 offset-lg-1">
               <h5 class="mb-40">A nossa Cerveja, é produzida segundo um processo 100% NATURAL
 onde a selecção da matéria-prima é o principal segredo, começando pela ÁGUA DE COIMBRA.</h5>
-              <button class="button dark">Visitar museu</button>
+              <a href="museum.html" class="button dark">Visitar museu</a>
             </div>
           </div>
 
@@ -226,7 +226,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
           <div class="others-wrapper">
             <h1 class="big-type">2019</h1>
 
-            <div class="carousel scroll-container scroll-container-horizontal">
+            <div class="css-carousel scroll-container-recommended">
               <div class="scroll-wrapper">
                 <div class="scroll-slide-recommended">
                 <article class="beer-article ambar-article">
