--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
               <h5 class="section-description invert">
                 This is the perfect place to shop for souvenirs, find the ultimate glass to drink a Praxis or to reserve a growler. 
                 Proudly showcase your wilder side by visiting the Praxis Brewery!</h5>
-              <!--<a href="online-store.html" class="button light disabled">Brevemente</a>-->
+              <!--<a href="shop.html" class="button light disabled">Brevemente</a>-->
             </div>
           </div>
         </section>
