change buttons in recommended section

--- a/brewery.html
+++ b/brewery.html
@@ -239,7 +239,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
                       <h3 class="beer-article-hidden-title">Ambar</h3>
                       <div class="t-center">
                         <h4 class="beer-article-title">Ambar</h4>
-                        <button class="button dark">Comprar</button>
+                        <a href="beers/ambar.html" class="button dark">Descobrir</a>
                       </div>
                     </div>
                   </a>
@@ -255,7 +255,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
                       <h3 class="beer-article-hidden-title">Pilsener</h3>
                       <div class="t-center">
                         <h4 class="beer-article-title">Pilsener</h4>
-                        <button class="button dark">Comprar</button>
+                        <a href="beers/pilsener.html" class="button dark">Descobrir</a>
                       </div>
                     </div>
                   </a>
@@ -271,7 +271,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
                       <h3 class="beer-article-hidden-title">Ipa</h3>
                       <div class="t-center">
                         <h4 class="beer-article-title">Ipa</h4>
-                        <button class="button dark">Comprar</button>
+                        <a href="beers/ipa.html" class="button dark">Descobrir</a>
                       </div>
                     </div>
                   </a>
