Mueseum page WIP - still need to be responsive

--- a/museum.html
+++ b/museum.html
@@ -102,7 +102,7 @@
         </nav>
       </header>
 
-      <main>
+      <main class="z-museum-front">
         <section class="fullscreen-wrapper dark-section d-flex">
           <img class="bg-image" src="assets/images/museum-lg.jpg" alt="Paxis Museum">
 
@@ -114,7 +114,7 @@
         <section class="fullscreen-wrapper dark-section heritage-section">
           <img class="bg-texture o-80" src="assets/images/beer-vector-texture.svg" alt="Seeds Background">
           <div class="row">
-            <div class="heritage-title-col col-12 col-md-8 col-lg-5 offset-lg-2">
+            <div class="heritage-title-col col-12 col-md-8 col-lg-6 offset-lg-1 col-xl-5 offset-lx-2">
               <h3 class="heritage-title invert">Herança da cerveja de coimbra</h3>
               <h5 class="heritage-info">O Museu, este misto de restaurante, “laboratório” cervejeiro e núcleo 
                   museológico assume-se como legítimo herdeiro do legado da famosa cerveja de Coimbra, com mais de século
@@ -122,7 +122,7 @@
                    alcançados nos últimos dois séculos, resultantes da Revolução Industrial.
                 </h5>
             </div>
-            <div class="heritage-beer col-md-7 col-lg-4">
+            <div class="heritage-beer col-md-7 col-lg-5 col-xl-4">
               <img class="heritage-beer-img" src="assets/images/praxis-beer-glass.svg">
             </div>
           </div>
@@ -130,13 +130,12 @@
 
         <section class="timeline-section dark-section">
           <h1 class="timeline-title">História</h1>
+          <h4 class="timeline-surtitle">Século XIX</h4>
 
           <!--TimeLine start-->
-          <ul class="timeline">
-
-            <li class="timeline-panel-wrapper">
-              <div class="timeline-badge">Século XIX</div>
-              <div class="timeline-panel">
+          <div class="timeline">
+            <article class="timeline-panel-wrapper row">
+              <div class="timeline-panel panel-left col-md-6">
                 <div class="timeline-panel-body">
                   <!--<div class="timeline-heading">
                     <h4 class="timeline-title">Mussum ipsum cacilds</h4>
@@ -146,33 +145,90 @@
                   </div>
                 </div>
               </div>
-              <div class="timeline-panel timeline-inverted timeline-panel-img">
+              <div class="timeline-panel col-md-6 timeline-inverted timeline-panel-img">
                 <div class="timeline-panel-body">
-                  <img src="http://via.placeholder.com/400x400" alt="">
+                  <img src="assets/images/timeline/timeline-img-1.png" alt="">
                 </div>
               </div>
-            </li>
+            </article>
 
-            <li class="timeline-panel-wrapper">
-              <div class="timeline-badge">1924</div>
-              <div class="timeline-panel timeline-panel-img">
+            <article class="timeline-panel-wrapper row">
+              <h4 class="timeline-badge">1924</h4>
+              <div class="timeline-panel col-md-6 timeline-panel-img">
                 <div class="timeline-panel-body">
-                  <img src="http://via.placeholder.com/400x400" alt="">
+                  <img src="assets/images/timeline/timeline-img-3.png" alt="">
                 </div>
               </div>
-              <div class="timeline-panel timeline-inverted">
+              <div class="timeline-panel panel-right col-md-6 timeline-inverted">
                 <div class="timeline-panel-body">
                   <div class="timeline-body">
                     <p>Período já de cariz industrial, durante o qual a produção cervejeira foi assegurada pela Fábrica de Cerveja de Coimbra, instalada na Avenida Navarro, 
-                      sensivelmente onde hoje se encontra localizada ma unidade hoteleira. A Fábrica também viria disponibilizar a venda direta ao público, na conhecida  “Cervejaria da Fábrica”</p>
+                      sensivelmente onde hoje se encontra localizada ma unidade hoteleira. A Fábrica também viria disponibilizar a venda direta ao público, na conhecida  “Cervejaria da Fábrica”.</p>
                   </div>
                 </div>
               </div>
-            </li>
-            <li class="timeline-panel-wrapper">
-              <div class="timeline-badge">End</div>
-            </li>
-          </ul>
+            </article>
+
+            <article class="timeline-panel-wrapper row">
+              <h4 class="timeline-badge">1934</h4>
+              <div class="timeline-panel panel-left col-md-6">
+                <div class="timeline-panel-body">
+                  <div class="timeline-body">
+                    <p>Em termos empresariais, a Companhia Cerveja de Coimbra deixou de ser apenas local para se integrar na 
+                      Sociedade Central de Cervejas, de âmbito nacional, mas mesmo assim mantendo uma certa autonomia e especificidade, 
+                      devido à tradição e excelente qualidade da sua cerveja, por exemplo,  com a criação e afirmação das célebres marcas <b>ONIX</b> e <b>TOPÁZIO</b>, 
+                      cuja produção prosseguiu nos anos seguintes.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline-panel col-md-6 timeline-inverted timeline-panel-img">
+                <div class="timeline-panel-body">
+                  <img src="assets/images/timeline/timeline-img-4.png" alt="">
+                </div>
+              </div>
+            </article>
+
+            <article class="timeline-panel-wrapper row">
+              <h4 class="timeline-badge">1959</h4>
+              <div class="timeline-panel col-md-6 timeline-panel-img">
+                <div class="timeline-panel-body">
+                  <img src="assets/images/timeline/timeline-img-5.png" alt="">
+                </div>
+              </div>
+              <div class="timeline-panel panel-right col-md-6 timeline-inverted">
+                <div class="timeline-panel-body">
+                  <div class="timeline-body">
+                    <p>Quando a produção da cerveja em Coimbra passou a ser assegurada pela Fábrica instalada no Loreto, inaugurada em 1959, 
+                      da qual ainda persistem as ruínas, como património industrial, as quais estão a ser hoje restauradas para dar lugar a uma 
+                      sede de uma empresa do ramo Farmacêutico, e onde terão também uma homenagem à antiga Cerveja de Coimbra.</p>
+                  </div>
+                </div>
+              </div>
+            </article>
+
+            <article class="timeline-panel-wrapper row">
+              <h4 class="timeline-badge">2006</h4>
+              <div class="timeline-panel col-md-6 pl-80">
+                <div class="timeline-panel-body">
+                  <div class="timeline-body">
+                    <p>2006 é Iniciado com a produção da microcervejeira PRAXIS, na zona historicamente emblemática de St.ª Clara, com o regresso à cerveja artesanal, 
+                      integrada no grupo das chamadas “cervejas especiais” e de boa qualidade ‒ assumindo-se a empresa como herdeira do legado da famosa cerveja de Coimbra, 
+                      com século e meio de tradição ‒ mas aproveitando dos mais avançados progressos tecnológicos e de fabrico, alcançados nos últimos dois séculos, 
+                      ou seja, desde o início da Revolução Industrial. Mas isto será já outra história…</p>
+                  </div>
+                </div>
+              </div>
+              <div class="timeline-panel col-md-6 timeline-inverted timeline-panel-img">
+                <div class="timeline-panel-body">
+                  <img src="assets/images/timeline/timeline-img-1.png" alt="">
+                </div>
+              </div>
+            </article>
+
+            <article class="timeline-panel-wrapper row">
+              <h4 class="timeline-badge">hoje</h4>
+            </article>
+          </div>
         </section>
 
         
