fixing recomended beers section & add treated imgs

--- a/brewery.html
+++ b/brewery.html
@@ -229,49 +229,49 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
             <div class="css-carousel scroll-container-recommended">
               <div class="scroll-wrapper">
                 <div class="scroll-slide-recommended">
-                <article class="beer-article ambar-article">
-                  <a class="beer-article-link" href="#">
-                    <div class="beer-article-media">
-                      <!--<div class="beer-bg"></div>-->
-                      <img src="./assets/images/ambar-reco.png">
-                    </div>
-                    <div class="beer-article-content">
-                      <h3 class="beer-article-hidden-title">Ambar</h3>
-                      <div class="t-center">
-                        <h4 class="beer-article-title">Ambar</h4>
-                        <a href="beers/ambar.html" class="button dark">Descobrir</a>
+                  <article class="beer-article ambar-article">
+                    <a class="beer-article-link" href="./beers/ambar.html">
+                      <div class="beer-article-media">
+                        <!--<div class="beer-bg"></div>-->
+                        <img src="./assets/images/shop/ambar-shadow.png">
                       </div>
-                    </div>
-                  </a>
-                </article>
+                      <div class="beer-article-content">
+                        <h3 class="beer-article-hidden-title">Ambar</h3>
+                        <div class="t-center">
+                          <h4 class="beer-article-title">Ambar</h4>
+                          <button href="beers/ambar.html" class="button dark">Descobrir</button>
+                        </div>
+                      </div>
+                    </a>
+                  </article>
                 </div>
                 <div class="scroll-slide-recommended">
-                <article class="beer-article pilsener-article">
-                  <a class="beer-article-link" href="#">
-                    <div class="beer-article-media">
-                      <img src="./assets/images/ambar-reco.png">
-                    </div>
-                    <div class="beer-article-content">
-                      <h3 class="beer-article-hidden-title">Pilsener</h3>
-                      <div class="t-center">
-                        <h4 class="beer-article-title">Pilsener</h4>
-                        <a href="beers/pilsener.html" class="button dark">Descobrir</a>
+                  <article class="beer-article pilsener-article">
+                    <a class="beer-article-link" href="./beers/pilsener.html">
+                      <div class="beer-article-media">
+                        <img src="./assets/images/shop/pilsener-shadow.png">
                       </div>
-                    </div>
-                  </a>
-                </article>
+                      <div class="beer-article-content">
+                        <h3 class="beer-article-hidden-title">Pilsener</h3>
+                        <div class="t-center">
+                          <h4 class="beer-article-title">Pilsener</h4>
+                          <button class="button dark">Descobrir</button>
+                        </div>
+                      </div>
+                    </a>
+                  </article>
                 </div>
                 <div class="scroll-slide-recommended ipa-article">
                 <article class="beer-article">
-                  <a class="beer-article-link" href="#">
+                  <a class="beer-article-link" href="./beers/ipa.html">
                     <div class="beer-article-media">
-                      <img src="./assets/images/ambar-reco.png">
+                      <img src="./assets/images/shop/ipa-shadow.png">
                     </div>
                     <div class="beer-article-content">
                       <h3 class="beer-article-hidden-title">Ipa</h3>
                       <div class="t-center">
                         <h4 class="beer-article-title">Ipa</h4>
-                        <a href="beers/ipa.html" class="button dark">Descobrir</a>
+                        <button href="beers/ipa.html" class="button dark">Descobrir</button>
                       </div>
                     </div>
                   </a>
