--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -176,20 +176,20 @@
           </section>
         </div>
 
-        <section class="beer-recomendation-wrapper row">
-          <div class="col-12 col-sm-9 col-lg-7 beer-recomendation-image-link">
-            <img src="../assets/images/pilsener-recommend.jpg" class="beer-recomendation-bg">
-            <a href="../beers.html" class="beer-recomendation-link d-flex align-items-center">
+        <section class="food-recommendation-wrapper row">
+          <div class="col-12 col-md-9 col-xl-7 food-recommendation-image-link">
+            <img src="../assets/images/pilsener-recommend.jpg" class="food-recommendation-bg">
+            <a href="../beers.html" class="food-recommendation-link d-flex align-items-center">
               <span class="mr-5">Restaurante</span>
-              <img src="../assets/images/news-arrow.svg" class="beer-recomendation-arrow">
+              <img src="../assets/images/news-arrow.svg" class="food-recommendation-arrow">
             </a>
           </div>
-          <div class="col-12 col-sm-10 col-lg-6 offset-sm-2 offset-lg-6 beer-recomendation-card-container">
-            <div class="beer-recomendation-card d-flex flex-column justify-content-between">
+          <div class="col-12 col-md-10 col-xl-6 offset-md-2 offset-xl-6 food-recommendation-card-container">
+            <div class="food-recommendation-card d-flex flex-column justify-content-between">
               <div>
-                <h3 class="beer-recomendation-title">Recomendações</h3>
-                <h4 class="beer-recomendation-subtitle">Como Beber</h4>
-                <h5 class="beer-recomendation-description">Irresistível com uma terrina de foie gras com beringela e nozes. 
+                <h3 class="food-recommendation-title">Recomendações</h3>
+                <h4 class="food-recommendation-subtitle">Como Beber</h4>
+                <h5 class="food-recommendation-description">Irresistível com uma terrina de foie gras com beringela e nozes. 
                   Estupenda opção para acompanhar uns deliciosos brownies de caramelo e crostini de nozes com queijo chèvre. 
                 </h5>
               </div>
