--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
                   <h3 class="title">B.S.D.A</h3>
                 </a>
               </article>
-              <article class="swiper-slide strong-dunkel-item">
-                <a href="beers/strong-dunkel.html" class="cover">
+              <article class="swiper-slide dunkel-strong-item">
+                <a href="beers/dunkel-strong.html" class="cover">
                   <div class="picture">
                       <span class="label obj-label-left">Descobrir</span>
-                      <span class="label obj-label-right">Strong Dunkel</span>
-                      <img src="./assets/images/lausus-beer-lg.png" class="media"/>
+                      <span class="label obj-label-right">Dunkel Strong</span>
+                      <img src="./assets/images/dunkel-strong-beer-lg.png" class="media"/>
                   </div>
-                  <h3 class="title">Strong Dunkel</h3>
+                  <h3 class="title">Dunkel Strong</h3>
                 </a>
               </article>
             </div>
