--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -118,8 +118,7 @@
                 <h2 class="beer-name">Ambar</h2>
               </div>
               <div class="beer-description-col col-12 col-md-8 col-lg-4 offset-lg-4">
-                <h5 class="beer-description">De traços avermelhados, evidencia-se pelo ligeiro sabor a melaço e um amargo singular.
-                </h5>
+                <h5 class="beer-description">De traços avermelhados, evidencia-se pelo ligeiro sabor a melaço e um amargo singular.</h5>
                 <h5 class="beer-ingredients">Ingredientes</h5>
                 <div class="beer-ingredient-container">
                   <p>
