--- a/beers/pilsener.html
+++ b/beers/pilsener.html
@@ -118,9 +118,7 @@
                 <h2 class="beer-name">Pilsener</h2>
               </div>
               <div class="beer-description-col col-12 col-md-8 col-lg-4 offset-lg-4">
-                <h5 class="beer-description">Cerveja com amargor e aroma singulares, 
-                  combina na perfeição com a música de Portuguese Pedro.
-                </h5>
+                <h5 class="beer-description">De cor levemente dourada, distingue-se pelo aroma suave a lúpulo.</h5>
                 <h5 class="beer-ingredients">Ingredientes</h5>
                 <div class="beer-ingredient-container">
                   <p>
