Quick video test

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
         </section>
 
         <section class="fullscreen-wrapper dark-section">
-          <img class="bg-image" src="assets/images/brewery-lg.jpg" alt="Cervejaria">
+          <!--<img class="bg-image" src="assets/images/brewery-lg.jpg" alt="Cervejaria">-->
+          <video class="bg-video" loop="" muted="" autoplay="" playsinline="" src="./assets/images/praxis_teaser.mp4"></video>
           <div class="row">
             <div class="col-12 col-sm-10 col-lg-4 offset-md-1 offset-lg-7">
               <h3 class="section-title invert">Cervejaria Praxis</h3>
