--- a/brewery.html
+++ b/brewery.html
@@ -99,11 +99,12 @@
 
       <main>
         <section class="fullscreen-wrapper dark-section d-flex">
-          <img class="bg-image" src="assets/images/brew-process-lg.jpg" alt="Paxis Process">
+          <!--<img class="bg-image" src="assets/images/brew-process-lg.jpg" alt="Paxis Process">-->
+          <video class="bg-video" loop="" muted="" autoplay="" playsinline="" src="./assets/images/praxis_teaser.mp4"></video>
 
-          <div class="w-50 align-self-end">
+          <!--<div class="w-50 align-self-end">
             <h2 class="invert">How <br>We Brew</h2>
-          </div>
+          </div>-->
         </section>
         
         <section class="fullscreen-wrapper present-section light-section d-flex justify-content-between flex-column">
